[package]
name = "pixels"
description = "A tiny library providing a GPU-powered pixel frame buffer."
version = "0.15.0"
authors = ["Jay Oster <jay@kodewerx.org>"]
edition = "2021"
rust-version = "1.74.0"
repository = "https://github.com/parasyte/pixels"
readme = "README.md"
keywords = ["pixels", "2D", "GPU", "framebuffer"]
categories = ["graphics", "rendering"]
license = "MIT"
include = [
    "/Cargo.*",
    "/LICENSE",
    "/README.md",
    "/img/pixels.png",
    "/shaders/*.wgsl",
    "/src/**/*",
]

[dependencies]
bytemuck = "1.24.0"
raw-window-handle = "0.6"
thiserror = "2.0.17"
ultraviolet = "0.10"
wgpu = "^27.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "^27.0", features = ["webgl"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.4"

[dev-dependencies]
pixels-mocks = { path = "internals/pixels-mocks" }
winit = { version = "0.30.12", features = ["rwh_06"] }

[workspace]
members = [
    "examples/*",
    "internals/*",
    "run-wasm",
]
