[package]
name = "conway"
version = "0.1.0"
authors = ["Jay Oster <jay@kodewerx.org>"]
edition = "2021"
publish = false

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
byteorder = "1"
env_logger = "0.11"
error-iter = "0.4"
getrandom = "0.2"
clipline = "0.2"
log = "0.4"
pixels = { path = "../.." }
randomize = { version = "5", features = ["getrandom"] }
winit = { version = "0.29", features = ["rwh_05"] }
winit_input_helper = "0.15"
