[package]
name = "minimal-egui"
version = "0.1.0"
authors = ["Jay Oster <jay@kodewerx.org>"]
edition = "2021"
publish = false

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
egui = { git = "https://github.com/mattjuk/egui.git", branch = "winit-0.29" }
egui-wgpu = { git = "https://github.com/mattjuk/egui.git", branch = "winit-0.29" }
egui-winit = { git = "https://github.com/mattjuk/egui.git", branch = "winit-0.29", default-features = false, features = ["links"] }
env_logger = "0.10"
error-iter = "0.4"
log = "0.4"
pixels = { path = "../.." }
winit = { version = "0.29", features = ["rwh_05"] }
winit_input_helper = "0.15"
