[package]
name = "minimal-egui"
version = "0.1.0"
authors = ["Jay Oster <jay@kodewerx.org>"]
edition = "2021"
publish = false

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
egui = { git = "https://github.com/emilk/egui", branch = "main" }
egui-wgpu = { git = "https://github.com/emilk/egui", branch = "main" }
egui-winit = { git = "https://github.com/emilk/egui", branch = "main", default-features = false, features = ["links"] }
env_logger = "0.11.3"
error-iter = "0.4"
log = "0.4"
pixels = { path = "../.." }
winit = { version = "0.30.11", features = ["rwh_06"] }
