[package]
name = "minimal-winit"
version = "0.1.0"
authors = ["Jay Oster <jay@kodewerx.org>"]
edition = "2021"
publish = false

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
async-winit = "0.1"
env_logger = "0.10"
error-iter = "0.4"
futures-lite = "1"
log = "0.4"
pixels = { path = "../.." }
pollster = "0.3"
winit = "0.28"
winit_input_helper = "0.14"
